--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "watch": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0"
